Try fix flip btn: Reduced z-index of rotate-180 class

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -909,7 +909,7 @@ height: 2rem;
   right: 7%;
   background: rgba(255, 255, 255, 0.6);
   border-radius: 50%;
-  z-index: 2000;
+  z-index: 5000;
   transform: rotateY(-180deg);
   -webkit-transform: rotateY(-180deg);
   border: 2px solid rgb(0, 0, 0, 0.8);
